# loftbar

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5cb56666aac8_initial.py  83379ead979e_initial.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routers/: flavors.py  test.py  user.py  users.py
backend/app/core/: common.py  config.py
backend/app/db/: session_maker.py
backend/app/db/models/: __init__.py  bowl.py  flavor.py  ingredient.py  liquid.py  preset.py  preset_flavor.py  preset_ingredient.py  user.py
backend/app/db/repositories/: __init__.py  base.py  bowls.py  flavors.py  liquids.py  presets.py  users.py
backend/app/db/uow/: __init__.py  abc_uow.py  uow.py
backend/app/di/: provider.py
backend/app/entrypoints/: __main__.py
backend/app/schemas/: flavor.py
backend/app/schemas/dto/user/: base.py
backend/app/services/: __init__.py  flavor.py  test.py
backend/app/services/abc/: __init__.py  abc_flavor.py  abc_test.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/app/admin/: page.jsx
frontend/src/app/builder/: page.jsx
frontend/src/app/presets/: page.jsx
frontend/src/components/: mainSection.jsx  nav.jsx
frontend/src/components/admin/: AdminLogin.jsx  BowlsTab.jsx  FlavorsTab.jsx  LiquidsTab.jsx  PresetsTab.jsx  SettingsTab.jsx  mainAdminPage.jsx
frontend/src/components/auth/: initTelegramAuth.jsx
frontend/src/utils/: api.js
(+5 files in other folders)
